refactor: synchronized unit tests with service methods